2018-02-21  Charlie Zender  <zender@uci.edu>

	* Document --fl_prn

	* Change remaining printf() to fprintf() and finish printing to fp_prn

2018-02-20  Charlie Zender  <zender@uci.edu>

	* Allow ncks to print to formatted file fp_prn rather than to stdout

2018-02-15  Charlie Zender  <zender@uci.edu>

	* Security: Explicitly unset IFS before wordsplitting, so Bash uses default IFS=<space><tab><newline>

	* Security: Use /bin/mv and /bin/cp instead of mv and cp, respectively

	* Add 'bilin' and 'aave' as synonyms to 'bilinear' and 'conserve', respectively

2018-02-14  Charlie Zender  <zender@uci.edu>

	* Fix compiler warnings when nc_set_log_level() is #undef'd

2018-02-13  Charlie Zender  <zender@uci.edu>

	* NCO 4.7.3-alpha04 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.7.3-alpha04: Breaded venison';git push
	git tag -a 4.7.3-alpha04 -m 'fmt_val, set_log_level()';git push --tags

	* Document --fmt_val, ensure it only applies to floating point values

2018-02-12  Charlie Zender  <zender@uci.edu>

	* Add --fmt_val, --val_fmt, --value_format for formatting variable values

2018-02-08  Charlie Zender  <zender@uci.edu>

	* Deprecate old/unused feature status from nco_cnf_prn()

	* Remove 'var' from Invoke.cc OMP clause

	* bld/Makefile allows for Ubuntu 4.4.0 exception with UBUNTU_440 argument

2018-02-07  Charlie Zender  <zender@uci.edu>

	* Add --enable-logging to autoconf

	* Remove duplicate nc_set_log_level() call triggered by dbg_lvl

2018-02-06  Charlie Zender  <zender@uci.edu>

	* Clarify CF violation warning when attribute type is NC_STRING

2018-02-05  Charlie Zender  <zender@uci.edu>

	* Henry cleaned-up ncap2 which now builds warning-free with gcc, clang, g++, and MSVC

2018-02-05 Henry Butowsky  <henryb@hush.com>

	* Add shell script bm/cch_clr.sh to clear caches. Works with Linux and MacOS.

2018-02-04  Charlie Zender  <zender@uci.edu>

	* Fix three bugs introduced in 10 supposedly simple lines of changes from yesterday
